Implement Incident tests